--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "homepage": "https://github.com/Eugene32/Employee-Tracker#readme",
   "dependencies": {
     "console.table": "^0.10.0",
+    "dotenv": "^16.0.0",
+    "express": "^4.17.3",
     "fs": "^0.0.1-security",
     "inquirer": "^8.2.0",
     "mysql2": "^2.3.3"
